--- a/E-coin.html
+++ b/E-coin.html
@@ -6,6 +6,6 @@
     <title>système de notification qui informe les employés lorsqu’ils reçoivent une nouvelle prime. </title>
 </head>
 <body>
-    <h1>inscrivez vous et déposer votre dossier</h1>
+    <h1>Une nouvelle prime</h1>
 </body>
 </html>
